Revision history for {{$dist->name}}

{{$NEXT}}
  - Remove App::Ack
  - Remove Archive::Tar::Wrapper
  - Remove autodie
  - Remove DBD::mysqlPP
  - Remove DBD::PgPP
  - Remove Devel::StackTrace
  - Remove Digest::MD5
  - Remove Dist::Zilla::Plugin::Bootstrap::lib
  - Remove Dist::Zilla::Plugin::DynamicPrereqs
  - Remove Dist::Zilla::Plugin::Meta::Dynamic::Config
  - Remove Dist::Zilla::Plugin::PPPort
  - Remove JSON
  - Remove Moose
  - Remove YAML::XS
  - Remove Text::Hunspell

2.25      2021-06-30 10:31:18 -0600
  - Updated my dists to latest
  - Added Devel::ebug::HTTP

2.24      2021-06-24 01:55:00 -0600
  - Updated my dists to latest
  - Added Pod::Simple::Words
  - Added Text::HumanComputerWords
  - Added Alien::Build::Plugin::Extract::Libarchive

2.23      2021-06-01 13:05:17 -0600
  - Updated my dists to latest
  - Added Archive::Libarchive
  - Added Archive::Libarchive::Extract
  - Added Archive::Libarchive::Peek
  - Added Archive::Libarchive::Unwrap
  - Added Alien::GSL
  - Added FFI::C::Stat
  - Added Test::Archive::Libarchive
  - Added Package::Checkpoint
  - Added File::Readbackwards
  - Added PPIx::DocumentName
  - Removed Archive::Libarchive::XS
  - Removed Archive::Libarchive::Any

2.22      2021-04-17 03:03:38 -0600
  - Updated my dists to latest
  - Remove FFI::TinyCC::Inline on macos
  - Remove WebService::DailyConnect

2.21      2021-03-27 09:21:28 -0600
  - Updated my dists to latest
  - Added Test2::Tools::Process
  - Remove Test::Exit

2.20      2021-03-20 04:56:40 -0600
  - Updated my dists to latest
  - Added FFI::Platypus::Declare
  - Added Alien::OpenSSL

2.19      2020-07-10 12:19:50 -0600
  - Updated my dists to latest
  - Remove deprecated module Module::Build::FFI
  - Remove deprecated module FFI::Util
  - Remove unused module Archive::Libarchive::FFI
  - Remove merged module Wasm::Hook
  - Added Const::Introspect::C
  - Added Clang::CastXML
  - Added Alien::castxml

2.18      2020-05-20 17:28:20 -0600
  - Updated my dists to latest