@@ -110,17 +110,20 @@ comes with this distribution for details.
 - Dist::Zilla::App::Command::aliendeps
 - Dist::Zilla::Plugin::AlienBuild
 - Dist::Zilla::Plugin::Alt
+- Dist::Zilla::Plugin::ArchiveTar
 - Dist::Zilla::Plugin::CommentOut
 - Dist::Zilla::Plugin::CSS::Compressor
 - Dist::Zilla::Plugin::FFI
 - Dist::Zilla::Plugin::InsertExample
 - Dist::Zilla::Plugin::JavaScript::Minifier
+- Dist::Zilla::Plugin::Libarchive
 - Dist::Zilla::Plugin::MathInt64
 - Dist::Zilla::Plugin::OurPkgVersion
 - Dist::Zilla::Plugin::Test::Version
 - Dist::Zilla::Plugin::TextTabs
 - Dist::Zilla::PluginBundle::Author::Plicease
 - Env::ShellWords
+- Eval::LineNumbers
 - Exception::Class::DBI
 - FFI
 - FFI::C
@@ -141,12 +144,14 @@ comes with this distribution for details.
 - FFI::Platypus::Type::PtrObject
 - FFI::TinyCC
 - FFI::TinyCC::Inline
+- File::BaseDir
 - File::LibMagic::FFI
 - File::Listing
 - File::Listing::Ftpcopy
 - File::ReadBackwards
 - File::ShareDir::Dist
 - File::Which
+- File::XDG
 - JSON::MaybeXS
 - Kafka::Librd
 - Lingua::Alphabet::Phonetic::LAPD
