@@ -42,7 +42,7 @@ Alien::Build::Plugin::Fetch::Rewrite           = 0.02
 Alien::castxml                                 = 0.01
 Alien::chromaprint                             = 0.02
 Alien::CMake                                   = 0.12
-Alien::cmake3                                  = 0.06
+Alien::cmake3                                  = 0.08
 Alien::curl                                    = 0.08
 Alien::Editline                                = 0.10
 Alien::Expat                                   = 0.02
@@ -50,7 +50,7 @@ Alien::FFI                                     = 0.25
 Alien::flex                                    = 0.14
 Alien::gmake                                   = 0.21
 Alien::GMP                                     = 1.16
-Alien::GSL                                     = 1.03
+Alien::GSL                                     = 1.07
 Alien::gzip                                    = 0.06
 Alien::help2man                                = 0.01
 Alien::Hunspell                                = 0.17
@@ -76,13 +76,13 @@ Alien::Role::Alt                               = 0.05
 Alien::Role::Dino                              = 0.06
 Alien::unzip                                   = 0.03
 Alien::wasmtime                                = 0.16
-Alien::xz                                      = 0.06
+Alien::xz                                      = 0.08
 ;Alt::Alien::cmake::System                     = 0.0502
 ;Alt::Alien::FFI::System                       = 0.21
 ;Alt::ExtUtils::PkgConfig::PLICEASE            = 1.15
 ;Alt::FFI::Raw::FFI                            = 0.04
 AnyEvent::Finger                               = 0.12
-AnyEvent::FTP                                  = 0.16
+AnyEvent::FTP                                  = 0.17
 AnyEvent::Ident                                = 0.08
 AnyEvent::Open3::Simple                        = 0.87
 AnyEvent::WebSocket::Client                    = 0.54
@@ -105,29 +105,32 @@ Browser::Start                                 = 0.01
 Clang::CastXML                                 = 0.02
 Class::Inspector                               = 1.36
 Const::Introspect::C                           = 0.01
-Devel::ebug                                    = 0.63
-Devel::ebug::HTTP                              = 0.33
+Devel::ebug                                    = 0.64
+Devel::ebug::HTTP                              = 0.36
 Dist::Zilla::App::Command::aliendeps           = 0.03
 Dist::Zilla::Plugin::AlienBuild                = 0.32
 Dist::Zilla::Plugin::Alt                       = 0.08
+Dist::Zilla::Plugin::ArchiveTar                = 0.03
 Dist::Zilla::Plugin::CommentOut                = 0.05
 Dist::Zilla::Plugin::CSS::Compressor           = 0.02
 Dist::Zilla::Plugin::FFI                       = 1.04
 Dist::Zilla::Plugin::InsertExample             = 0.14
 Dist::Zilla::Plugin::JavaScript::Minifier      = 0.02
+Dist::Zilla::Plugin::Libarchive                = 0.03
 Dist::Zilla::Plugin::MathInt64                 = 0.10
 Dist::Zilla::Plugin::OurPkgVersion             = 0.21
 Dist::Zilla::Plugin::Test::Version             = 1.09
 Dist::Zilla::Plugin::TextTabs                  = 0.04
-Dist::Zilla::PluginBundle::Author::Plicease    = 2.66
+Dist::Zilla::PluginBundle::Author::Plicease    = 2.68
 Env::ShellWords                                = 0.02
+Eval::LineNumbers                              = 0.35
 Exception::Class::DBI                          = 1.04
 FFI                                            = 1.15
 FFI::C                                         = 0.10
 FFI::C::Stat                                   = 0.02
 FFI::CheckLib                                  = 0.28
 FFI::ExtractSymbols                            = 0.05
-FFI::Platypus                                  = 1.50
+FFI::Platypus                                  = 1.55
 FFI::Platypus::Declare                         = 1.34
 FFI::Platypus::Lang::CPP                       = 0.05
 FFI::Platypus::Lang::CPP::Demangle::XS         = 0.03
@@ -141,12 +144,14 @@ FFI::Platypus::Type::Enum                      = 0.06
 FFI::Platypus::Type::PtrObject                 = 0.03
 FFI::TinyCC                                    = 0.30
 FFI::TinyCC::Inline                            = 0.28
+File::BaseDir                                  = 0.09
 File::LibMagic::FFI                            = 0.04
 File::Listing                                  = 6.14
 File::Listing::Ftpcopy                         = 0.09
 File::ReadBackwards                            = 1.06
 File::ShareDir::Dist                           = 0.07
 File::Which                                    = 1.27
+File::XDG                                      = 0.07
 Kafka::Librd                                   = 0.20
 Lingua::Alphabet::Phonetic::LAPD               = 0.02
 Log::Log4perl::Appender::TAP                   = 0.04
@@ -164,7 +169,7 @@ Pod::Simple::Words                             = 0.07
 PPIx::DocumentName                             = 1.01
 Shell::Config::Generate                        = 0.34
 Shell::Guess                                   = 0.09
-String::Template                               = 0.21
+String::Template                               = 0.23
 Term::Clui                                     = 1.76
 Term::EditLine                                 = 0.11
 Test::Alien::CPP                               = 1.02
